# gemini-automation-kit

./: .gitignore  README.md  examples.py  gemini_2_5_examples.py  gemini_3_examples.py  gemini_utils.py  pyproject.toml
examples/: gemini_2_5_examples.py  gemini_3_examples.py
src/gemini_kit/: __init__.py  core.py
